Deploy/k8s/manifests/5-statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: dev
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: "mongo-headless"
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          args: ["--dbpath", "/data/db"]
          volumeMounts:
            - mountPath: /data/db
              name: mongo-volume
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: mongo-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless
  namespace: dev
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    app: mongo
